
2020-11-30  Ron Norman <rjn@inglenet.com>

	* common.c (cob_check_version): rewrote as it did not work on some platforms

2020-11-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: limit sscanf width for strings
	* common.c (set_config_val): removed duplicate check for
	  ptr (!= 0 && == ' ')
	* call.c, common.c, fileio.c, intrinsic.c, mlio.c, strings.c:
	  reduced scope of some variables

2020-11-28  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_version): restored compat option for GC 2.x pre 2.2
	* fileio.c, screenio.c, strings.c, termio.c: fixed some minor coding issues
	* termio.c (cob_dump_field): fixed bad memcpy

2020-11-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, common.h: added externalized cob_nop to have a portable way to
	  ensure some optimizations on C level not be done (currently: not removing
	  #line references)

2020-11-26  Ron Norman <rjn@inglenet.com>

	* termio.c: Catch more table entries as repeated

2020-11-24  Ron Norman <rjn@inglenet.com>

	* termio.c: Improve field dump routines to look for duplicated data

2020-11-23  Ron Norman <rjn@inglenet.com>

	* common.h, move.c: add cob_init_table

2020-11-22  Ron Norman <rjn@inglenet.com>

	* common.c: set LIBC_FATAL_STDERR_ more hard coded 
	* fbdb.c (ix_bdb_delete_internal)->fileio.c(indexed_delete_internal):
	  fix error in use of wrong record area
	* fextfh.c->fileio.c (copy_file_to_fcd): use cob_cache_malloc instead
	  of cob_strdup

2020-11-22  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, common.h (cob_save_func): have correct return type
	  struct cob_func_loc* instead of void*

2020-11-20  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_stack_trace_internal): early exit if no data available
	* common.c (cob_check_version): test for minimal version 2.2

2020-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_init): skip initialization again if already done as
	  external callers may call it falsely again
