@@ -42,7 +42,6 @@
 #include <time.h>
 #include <sys/types.h>
 #include <sys/stat.h>
-#include <sys/timeb.h>
 
 #ifdef	HAVE_UNISTD_H
 #include <unistd.h>
